--- a/common/config/rush/.npmrc
+++ b/common/config/rush/.npmrc
@@ -22,5 +22,5 @@
 #
 #   //registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}
 #
-registry=https://registry.npmjs.org/
+registry=https://registry.npmmirror.com/
 always-auth=false
