--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "./src/index.ts",
+  "exports": {
+    "./client": "./src/client/react-dom-root.ts"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,6 +14,14 @@
   },
   "devDependencies": {
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "@types/node": "~20.14.12",
+    "vite-plugin-dts": "~4.0.0-beta.1",
+    "shared": "workspace:*",
+    "react-reconciler": "workspace:*",
+    "react": "workspace:*"
+  },
+  "peerDependencies": {
+    "react": "workspace:*"
   }
 }
