--- a/packages/scheduler/package.json
+++ b/packages/scheduler/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "@types/node": "~20.14.12",
+    "vite-plugin-dts": "~4.0.0-beta.1"
   }
 }
