--- a/packages/react-reconciler/package.json
+++ b/packages/react-reconciler/package.json
@@ -19,5 +19,8 @@
     "@types/node": "~20.14.12",
     "vite-plugin-dts": "~4.0.0-beta.1",
     "shared": "workspace:*"
+  },
+  "dependencies": {
+    "scheduler": "workspace:*"
   }
 }
