feat: 增加site用于仿真测试

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,7 +6,8 @@
   "main": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts",
-    "./jsx-runtime": "./src/jsx/react-jsx-element.ts"
+    "./jsx-runtime": "./src/jsx-runtime.ts",
+    "./jsx-dev-runtime": "./src/jsx-dev-runtime.ts"
   },
   "scripts": {
     "dev": "vite",
