wip: 完成渲染流程的useState

--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -16,10 +16,12 @@
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
     "@types/node": "~20.14.12",
-    "vite-plugin-dts": "~4.0.0-beta.1",
-    "shared": "workspace:*",
+    "vite-plugin-dts": "~4.0.0-beta.1"
+  },
+  "dependencies": {
+    "scheduler": "workspace:*",
     "react-reconciler": "workspace:*",
-    "react": "workspace:*"
+    "react-dom-bindings": "workspace:*"
   },
   "peerDependencies": {
     "react": "workspace:*"
