--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -10,15 +10,12 @@
     "./jsx-dev-runtime": "./src/jsx-dev-runtime.ts"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
     "@types/node": "~20.14.12",
-    "vite-plugin-dts": "~4.0.0-beta.1",
-    "shared": "workspace:*"
+    "vite-plugin-dts": "~4.0.0-beta.1"
   }
 }
