--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -24,6 +24,9 @@
     "paths": {
       "react": [
         "../react/src/index.ts"
+      ],
+      "react-dom": [
+        "../react-dom/src/index.ts"
       ]
     },
   },
