--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "./src/index.ts",
   "exports": {
+    ".": "./src/index.ts",
     "./client": "./src/client/react-dom-root.ts"
   },
   "scripts": {
