--- a/packages/react-dom/tsconfig.json
+++ b/packages/react-dom/tsconfig.json
@@ -20,7 +20,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "shared/*": [
+        "../shared/src/*"
+      ]
+    }
   },
   "include": [
     "src"
