--- a/site/tsconfig.app.json
+++ b/site/tsconfig.app.json
@@ -21,6 +21,7 @@
     "jsx": "react-jsx",
     /* Linting */
     "strict": true,
+    "esModuleInterop": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
