feat: 增加 React.lazy API

--- a/packages/react-reconciler/tsconfig.json
+++ b/packages/react-reconciler/tsconfig.json
@@ -27,6 +27,9 @@
       ],
       "shared/*": [
         "../shared/src/*"
+      ],
+      "react/*": [
+        "../react/src/*"
       ]
     },
   },
