feat: 增加  useTransition Hook；支持 React.startTransition API

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -25,6 +25,9 @@
       "react": [
         "../react/src/index.ts"
       ],
+      "react/*": [
+        "../react/src/*"
+      ],
       "react-dom": [
         "../react-dom/src/index.ts"
       ]
